# palantir

./: .appveyor.yml  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.html  README.md  config.cfg  config.toml
.github/: dependabot.yml
benches/: README.md  default  nginx.conf
src/: main.rs
src/cache/: mod.rs
src/config/: config.rs  defaults.rs  logger.rs  mod.rs  reader.rs
src/connect/: appargs.rs  connection.rs  mod.rs
src/connection/: connection.rs
src/pool/: mod.rs  pool.rs
src/proxy/: mod.rs  proxy.rs  tests.rs
tests/: integration.rs  integration_test.rs
