[package]
name = "palantir"
version = "0.1.0"
authors = [
    "MaaniBeigy <manibeygi@gmail.com>", 
    "AASAAM Software Group <info@aasaam.com>",
]
description = "HTTP REST API reverse proxy"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"
homepage = ""
repository = ""
keywords = [
    "proxy", 
    "http", 
    "rest", 
    "api", 
    "cache", 
    "health check", 
    "load balance",
]
categories = ["web-programming"]

[badges]
travis-ci = { repository = "", branch = "master" }
coveralls = { repository = "", branch = "master", service = "github" }

[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ['cache', 'rwlock', 'borrow']

[[bin]]
name = "palantir"
path = "src/main.rs"
doc = true

[dependencies]
log = { version = "0.4.5", features = ["std"] }
lazy_static = "1.3.0"
dotenv = "0.14.1"
actix-web = "1.0.2"
futures = "0.1"
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = '1.0'
toml = "0.5.1"