[package]
name = "palantir"
version = "0.1.0"
authors = [
    "MaaniBeigy <manibeygi@gmail.com>", 
    "AASAAM Software Group <info@aasaam.com>",
]
description = "HTTP REST API reverse proxy"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2018"
homepage = "https://github.com/AASAAM/palantir"
repository = "https://github.com/AASAAM/palantir.git"
keywords = [
    "proxy", 
    "http", 
    "rest", 
    "api", 
    "cache", 
    "health check", 
    "load balance",
]
categories = ["web-programming"]

[badges]
travis-ci = { repository = "AASAAM/palantir", branch = "master" }
coveralls = { repository = "AASAAM/palantir", branch = "master", service = "github" }


[features]
default = []
cache = []
rwlock = []
borrow = []
fast = ["cache", "rwlock", "borrow"]

[dependencies]
hyper = "0.14.8"
log = { version = "0.4.7", features = ["std"] }
lazy_static = "1.3.0"
dotenv = "0.14.1"
actix-web = { version = "0.7.18", features = ["alpn"] }
futures = "0.1.28"
clap = "2.33.0"
serde = { version = "1.0.94", features = ["derive"] }
serde_derive = "1.0.94"
toml = "0.5.1"
